--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.github.paolorotolo:expandableheightlistview:1.0.0'
+    implementation 'com.wssholmes.stark:circular-score:0.1.1'
 
 
 
